mudança na cor do header

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 header {
     display: flex;
     justify-content: space-between;
-    background-color:#E0FFFF;
+    background-color:#7fe9e9;
     border-bottom: 10px solid black;
     padding: 10px 20px;
     
