--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ a::before {
     content: "";
     width: 10px;
     height: 10px;
-    background-color: #ff7979;
+    background-color: #798cff;
     margin-right: 10px;
 }
 
@@ -43,7 +43,7 @@ a::before {
 
 #button {
     display: inline-block;
-    background-color:#ff7979;
+    background-color:#798cff;
     color: white;
     padding-top: 18px;
     padding-bottom: 18px;
@@ -59,3 +59,4 @@ a::before {
     transition: 300ms;
     transform: scale(1.1);
 }
+
