--- a/css/components/subtitle.css
+++ b/css/components/subtitle.css
@@ -1,6 +1,6 @@
-h1 {
+h2 {
     font-family: 'Press Start 2P', cursive;
-    font-size: 30px;
-    color: #798cff;
+    font-size: 25px;
+    color: #FFF;
     text-shadow: 4px 2px 0 #000;
 }
