--- a/css/components/skill-tec.css
+++ b/css/components/skill-tec.css
@@ -3,14 +3,20 @@
     font-family: 'Press Start 2P', sans-serif;
     color: white;
     font-size: 25px;
+    align-items: center;
 }
 
 .skill-tec .icon {
     margin-right: 25px;
+    width: 90px;
 }
 
 .skill-tec .right {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.skill-tec .title {
+    margin-bottom: 12px;
 }
