--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -1,7 +1,7 @@
 /*No background-image para acessar a pasta da imagem primeiro precisamos sair da pasta atual, que no caso é dos componentes. Para isso utilizamos o ../ até sair do
 diretório atual e poder acessar a pasta desejada, no caso a assets que contém as imagens */
 
-.banner {
+.main-banner {
     box-sizing: content-box;
     background-image: url(../../assets/img/kayn.jpg);
     background-size: 100%;
@@ -17,7 +17,7 @@ diretório atual e poder acessar a pasta desejada, no caso a assets que contém 
 Nossa section já está funcionando do jeito desejado, então para determinar um comportamento específico nós criamos uma div dentro dela como filho para atribuir características
 aos elementos */
 
-.banner .wrapper {
+.main-banner .wrapper {
     display: flex;
     flex-direction: column;
     width: 630px;
@@ -25,11 +25,11 @@ aos elementos */
     margin-top: 115px;
 }
 
-.banner .box {
+.main-banner .box {
     margin-bottom: 35px;
 }
 
-.banner .navigation {
+.main-banner .navigation {
     display: flex;
     justify-content: space-evenly;
 }
