--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -1,4 +1,4 @@
-.button {
+.main-button {
     display: inline-block;
     background-color:#798cff;
     color: white;
@@ -9,7 +9,7 @@
     font-size: 20px;
 }
 
-.button:hover {
+.main-button:hover {
     background-color: #ff4d4d;
     border-radius: 5px;
     box-shadow: none;
