--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -1,4 +1,4 @@
-.header {
+.main-header {
     display: flex;
     justify-content: space-between;
     background-color:#a4b0be;
@@ -7,7 +7,7 @@
     
 }
 
-.header #logo {
+.main-header #logo {
     width: 60px;
     height: 60px;
 }
