Change the subtitle to main-subtitle

--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -1,18 +1,18 @@
-.section {
+.main-section {
     background-color: #686de0;
     padding-top: 50px;
     padding-bottom: 100px;
     border-bottom: 10px solid #000;
 }
 
-.section .main-title {
+.main-section .main-title {
     margin-bottom: 70px;
 }
 
-.section.-bgProject {
+.main-section.-bgProject {
     background-color: lightgray;
 }
 
-.section.-bdProject {
+.main-section.-bdProject {
     border-color: black;
 }
