--- a/assets/components/style/aboutme.css
+++ b/assets/components/style/aboutme.css
@@ -2,6 +2,7 @@
     background-color: #2c2b2b;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     padding: 5rem;
 }
 
