--- a/assets/components/style/base.css
+++ b/assets/components/style/base.css
@@ -3,9 +3,11 @@
 @import url(navbar.css);
 @import url(header.css);
 @import url(aboutme.css);
+@import url(exp.css);
 
 body {
     font-family: 'Inter', sans-serif;
+    background-color: #2c2b2b;
 }
 
 :root {
