--- a/assets/components/style/exp.css
+++ b/assets/components/style/exp.css
@@ -97,7 +97,21 @@
     display: none;
 }
 
-.teste {
-    color: red;
-    background-color: pink;
+.exp__list-inactive {
+    color: gray;
+}
+
+.dev-active {
+    border-left: 2px solid var(--blue);
+    padding-left: 1rem;
+}
+
+.regispel-active {
+    border-left: 2px solid var(--blue);
+    padding-left: 0.5rem;
+}
+
+.tmkt-active {
+    border-left: 2px solid var(--blue);
+    padding-left: 1rem;
 }
