--- a/assets/components/style/navbar.css
+++ b/assets/components/style/navbar.css
@@ -7,6 +7,10 @@
 
 .navbar__logotype {
     color: var(--white);
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-decoration: none;
+    outline: none;
 }
 
 .navbar__links{
