--- a/assets/components/style/base.css
+++ b/assets/components/style/base.css
@@ -4,6 +4,7 @@
 @import url(header.css);
 @import url(aboutme.css);
 @import url(exp.css);
+@import url(project.css);
 
 body {
     font-family: 'Inter', sans-serif;
