--- a/assets/components/style/navbar.css
+++ b/assets/components/style/navbar.css
@@ -1,6 +1,7 @@
 .navbar {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color: #22201F;
     padding: 2rem;
 }
