--- a/assets/components/style/footer.css
+++ b/assets/components/style/footer.css
@@ -1,7 +1,8 @@
 .footer {
     display: flex;
     justify-content: center;
-    padding: 4rem 4rem 2rem 4rem;
+    padding: 2rem 0;
+    background-color: #22201F;
 }
 
 .footer__dev {
