--- a/assets/components/style/base.css
+++ b/assets/components/style/base.css
@@ -7,6 +7,10 @@
 @import url(project.css);
 @import url(footer.css);
 
+/* Responsive */
+
+@import url(/assets/components/mobile/mobile-nav.css);
+
 body {
     font-family: 'Inter', sans-serif;
     background-color: #2c2b2b;
