--- a/assets/components/style/base.css
+++ b/assets/components/style/base.css
@@ -10,6 +10,7 @@
 /* Responsive */
 
 @import url(/assets/components/mobile/mobile-nav.css);
+@import url(/assets/components/mobile/mobile-header.css);
 
 body {
     font-family: 'Inter', sans-serif;
