--- a/assets/components/mobile/mobile-header.css
+++ b/assets/components/mobile/mobile-header.css
@@ -25,7 +25,7 @@
         display: none;
     }
 
-    .aboutme, .exp, .project, .footer {
+    .exp, .project, .footer {
         display: none;
     }
 }
