--- a/assets/components/mobile/mobile-nav.css
+++ b/assets/components/mobile/mobile-nav.css
@@ -1,10 +1,16 @@
 @media (max-width: 768px){
+    .navbar {
+        display: flex;
+        flex-direction: column;
+    }
+
     .navbar__logotype{
         display: none;
     }
 
     .navbar__menu {
         display: block;
+        align-self: flex-start;
     }
 
     .navbar__menu-hamburguer {
@@ -26,7 +32,6 @@
         text-align: center;
         background-color: blue;
         height: 50vh;
-        padding: 2rem;
         width: 100%;
         position: fixed;
         left: 150%;
