--- a/assets/components/style/base.css
+++ b/assets/components/style/base.css
@@ -11,6 +11,7 @@
 
 @import url(/assets/components/mobile/mobile-nav.css);
 @import url(/assets/components/mobile/mobile-header.css);
+@import url(/assets/components/mobile/mobile-aboutme.css);
 
 body {
     font-family: 'Inter', sans-serif;
