Section exp responsive

--- a/assets/components/style/base.css
+++ b/assets/components/style/base.css
@@ -12,6 +12,7 @@
 @import url(/assets/components/mobile/mobile-nav.css);
 @import url(/assets/components/mobile/mobile-header.css);
 @import url(/assets/components/mobile/mobile-aboutme.css);
+@import url(/assets/components/mobile/mobile-exp.css);
 
 body {
     font-family: 'Inter', sans-serif;
