Responsive project section

--- a/assets/components/style/base.css
+++ b/assets/components/style/base.css
@@ -13,6 +13,7 @@
 @import url(/assets/components/mobile/mobile-header.css);
 @import url(/assets/components/mobile/mobile-aboutme.css);
 @import url(/assets/components/mobile/mobile-exp.css);
+@import url(/assets/components/mobile/mobile-project.css);
 
 body {
     font-family: 'Inter', sans-serif;
