adjust exp description height

--- a/assets/components/mobile/mobile-exp.css
+++ b/assets/components/mobile/mobile-exp.css
@@ -32,6 +32,7 @@
 
     .exp__description-text {
         width: 350px;
+        height: 230px;
     }
 
     .exp__description-dev, .exp__description-regispel, .exp__description-tmkt {
