--- a/assets/components/style/base.css
+++ b/assets/components/style/base.css
@@ -21,6 +21,15 @@ body {
     background-color: #2c2b2b;
 }
 
+body::-webkit-scrollbar{
+    width: 10px;
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color: var(--blue);
+    border-radius: 5px;
+}
+
 :root {
     --gray: #C4C4C4;
     --white: #FFF;
