--- a/assets/components/mobile/mobile-nav.css
+++ b/assets/components/mobile/mobile-nav.css
@@ -14,27 +14,29 @@
     }
 
     .navbar__menu-hamburguer {
-        width: 50px;
+        width: 40px;
     }
 
     .navbar__active {
-        position: absolute;
-        left: 0;
-        top: 120px;
+       transform: translateX(0);
+    }
+
+    .wrap-nav {
+        transform: translateX(-100%);
     }
 
     .navbar__links {
-        position: fixed;
-        right: -120%;
+        position: absolute;
         top: 120px;
+        width: 100%;
+        transition: transform 200ms linear;
         padding: 2rem 0;
         background-color: #22201f;
-        transition: 0.3s linear;
-        width: 100%;
         display: flex;
         flex-direction: column;
         gap: 2rem;
         align-items: center;
+        margin-right: 0;
     }
 
     .navbar__links a {
