--- a/assets/components/style/exp.css
+++ b/assets/components/style/exp.css
@@ -3,11 +3,11 @@
     justify-content: space-around;
     align-items: center;
     padding: 4rem;
+    background-color: #22201F;
 }
 
 
 .exp__wrapper{
-    background-color: #2c2b2b;
     display: flex;
     flex-direction: column;
     align-items: center;
