--- a/assets/components/style/base.css
+++ b/assets/components/style/base.css
@@ -39,6 +39,7 @@ body::-webkit-scrollbar-thumb{
     }
     .container{max-width: 1280px;}
     .navbar__logotype{margin-left: 0;}
+    .navbar__links{margin-right: 0;}
 }
 
 :root {
